Re-correct list-group-item display to inline-table
Prevents issue with text not centering and the text cutoff in settings
at the same time, also makes the input field postion themselves under
the description when appropriate.

--- a/app/assets/stylesheets/admin/settings.scss
+++ b/app/assets/stylesheets/admin/settings.scss
@@ -1,5 +1,5 @@
 li.list-group-item {
-  display: inline-flex;
+  display: inline-table;
   width: 100%;
   padding: 10px 0;
 
